--- a/4-tools/2014~2016.html
+++ b/4-tools/2014~2016.html
@@ -18,6 +18,18 @@
     <td>Misc</td>
   </tr>
   <tr>
+    <td>2019</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>2018</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
     <td>2017</td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
